--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
             android:name=".ui.pickupUser.PickupUserActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.pickUpWorker.PickUpWorkerActivity"
+            android:name=".ui.pickupWorker.PickUpWorkerActivity"
             android:exported="false" />
 
         <meta-data
